<resources>
    <string name="app_name">chapter05</string>
    <string name="login_password">登录密码:</string>
    <string name="login_phonecode">验证码: &#160; &#160;</string>
    <string name="phone_number">手机号码:</string>
    <string name="login">登录</string>
    <string name="get_login_code">获取验证码</string>
    <string name="forget_password">忘记密码</string>
    <string name="get_code">获取验证码</string>
    <string name="remember_password">记住密码</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="password_login">密码登录</string>
    <string name="password_hint">请输入密码</string>
    <string name="code_hint">请输入手机验证码</string>
    <string name="loginCode_login">验证码登录</string>
    <string name="new_password">新密码 ：&#160; &#160;&#160; &#160; &#160;</string>
    <string name="re_new_password">确认新密码：&#160;</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="re_new_password_hint">请再次新密码</string>
    <string name="find_password_code">验证码: &#160; &#160; &#160; &#160; &#160; &#160;</string>
    <string name="find_password_get_code">获取验证码</string>
    <string name="find_password_input_code">请输入手机验证码</string>
    <string name="find_password_confirm">确定</string>


</resources>